Some more changes

--- a/src/main/java/server_config.properties
+++ b/src/main/java/server_config.properties
@@ -1,3 +1,3 @@
 server.port=8080
-server.name=ChatServer
-banned.phrases=eye,needle,blood
+server.name=Server
+banned.phrases=eye,knight,needle,blood
